# mpas-o-workflow

./: CMakeLists.txt  E3SM.patch  README.md  create-mpas.sh  env.yaml  load-mpas-perlmutter.sh  load-mpas.sh  mpas-ftk-henson.py  mpas-henson.py  mpas.yaml  mpas_spack.yaml  run-ftk.sh  unload-mpas.sh  wilkins-config.yaml  wilkins-master.py  wilkins-run.sh
src/: CMakeLists.txt  consumer.cpp
wilkins/: repo.yaml
